--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@
 
 ul.tabs{
 	width: 100%;
-	background: #363636;
+	background: #0A0861;
 	list-style: none;
 	display: flex;
 }
@@ -50,7 +50,7 @@ ul.tabs li a{
 }
 
 .active{
-	background: #0984CC;
+	background: #363636;
 }
 
 ul.tabs li a .tab-text{
