--- a/main.css
+++ b/main.css
@@ -69,6 +69,12 @@ ul.tabs li a .tab-text{
 	text-align: justify;
 }
 
+.formulario{
+	width: calc(100% - 756px);
+	margin-left: auto;
+	margin-right: 252px;
+}
+
 
 @media screen and (max-width: 700px){
 	ul.tabs li{
